@@ -14,7 +14,15 @@ public class CruiseRuntime {
         return delegate.exec(commandline);
     }
 
+    public Process exec(String commandline) throws IOException {
+        return delegate.exec(commandline);
+    }
+
     public Process exec(String[] commandline, String[] o, File workingDir) throws IOException {
+        return delegate.exec(commandline, o, workingDir);
+    }
+
+    public Process exec(String commandline, String[] o, File workingDir) throws IOException {
         return delegate.exec(commandline, o, workingDir);
     }
 }
